tests/valid/definite/Subtype_Valid_3.whiley
define int where $ > 0 as sr3nat

void System::main([string] args):
    [sr3nat] x = [1]
    x[0] = 1
    print str(x)
    
